# todo-app-backend-code

./: .env  pyproject.toml
dailydo_todo_app/: main.py  setting.py
tests/: test_main.py
