[tool.poetry]
name = "daildo-todo-app"
version = "0.1.0"
description = ""
authors = ["Mubeen-creator <142151394+Mubeen-creator@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.3"
uvicorn = "^0.29.0"
sqlmodel = "^0.0.18"
psycopg = {extras = ["binary"], version = "^3.1.18"}
pytest = "^8.2.0"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
